Version CVS HEAD (?)

  * general changes:
    - replaced the old, confusing MIDI program change mechanism by a
      flexible MIDI instrument mapper which allows to map arbitrary
      (MIDI bank, MIDI program) pairs with arbitrary
      (engine type, instrument file, file index) triplets which will be
      loaded on the respective channel when such MIDI program change
      messages arrive, beside that, each entry allows to define a life-time
      strategy for the instrument, so the user can define whether the
      instrument should i.e. be permanently loaded (to be able to switch
      quickly among sounds) or i.e. loaded just on demand when the
      respective program change arrives (to safe RAM space), as well as a
      global volume factor for each entry, so the user can adjust the volume
      dynamic of his mapped instrument collection without having to modify
      the instrument files, also one can manage arbitrary amount of such
      MIDI instrument maps and assign each sampler channel individually
      a certain map, so that i.e. separation of normal instruments and
      drumkits is possible
    - new notification events for tracking audio/MIDI device changes,
      MIDI instrument map changes and MIDI instrument changes
    - sampler was limited to load max. 200 instruments in the background
      due to a constant size RingBuffer FIFO which is now replaced by a
      dynamic (unlimited) size std::list FIFO
    - added FX sends, these allow to route audio signals to arbitrary audio
      output channels for being processed by external effect processors
      (i.e. jack-rack), the send levels are controllable via arbitrary MIDI
      controllers
    - global (sampler wide) volume can now be controlled at runtime

  * MIDI driver:
    - dispatch bank select (MSB and LSB) messages

  * audio driver:
    - the ALSA audio output driver parameters now reflect the correct
      parameter value ranges for the respective selected sound card